2011-06-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Remove the concept of "being wedged" from new-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=63767

        Worker processes shouldn't ever become wedged.  My understanding is
        that this code was originally motivated by the old threading-based
        design but no longer servers any purpose.

        Note: If we actually have a problem with the test harness getting
        stuck, buildbot will kill us.

        * Scripts/webkitpy/layout_tests/layout_package/manager.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager_worker_broker.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager_worker_broker_unittest.py:

2011-06-30  Adam Barth  <abarth@webkit.org>

        The win32 implementation of fork is sad about forking test-webkitpy.
        Hopefully this will heal the bot.

        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:

2011-06-30  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Update new-run-webkit-tests now that the wk2 shared skipped list has moved
        https://bugs.webkit.org/show_bug.cgi?id=63780

        The shared list was moved from mac-wk2 to wk2 as part of
        http://trac.webkit.org/changeset/90125.

        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-06-30  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Darin Adler.

        Style Checker should flag removal of "developmentRegion = English;" from project.pbxproj.
        https://bugs.webkit.org/show_bug.cgi?id=62022

        Adds XcodeProjectFileChecker to check removal of "developmentRegion".

        * Scripts/webkitpy/style/checker.py: Added XcodeProjectFileChecker as a checker for *.pbxproj.
        * Scripts/webkitpy/style/checkers/xcodeproj.py: Added.